[package]
name = "tree-sitter-logcat"
description = "Android Logcat Tree-sitter parser"
version = "0.0.1"
authors = ["vinnom <vinnom.2d@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "logcat"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/vinnom/tree-sitter-logcat"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
    "bindings/rust/*",
    "grammar.js",
    "queries/*",
    "src/*",
    "tree-sitter.json",
    "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
